# ARC-Speech-Quality-LLM

./: .gitignore  LICENSE  README.md  evaluate.py  evaluate_noref.py  evaluate_noref_single.py  evaluate_ref.py  evaluate_ref_whisper.py  evaluate_tts_ranking.py  evaluate_tts_ranking_ref.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
eval_scripts/: evaluate.py  evaluate_noref_single.py  evaluate_tts_ranking.py
evaluation/NoReference/: metrics_all.json  metrics_dim_categ.json  metrics_dim_numeric.json  metrics_explanatory.json  metrics_mos_numeric.json  metrics_multi_dim.json  predictions_dim_categ.csv  predictions_dim_numeric.csv  predictions_explanatory.csv  predictions_mos_numeric.csv  predictions_multi_dim.csv
evaluation/NoReference_FrozenAST/: metrics_all.json  metrics_dim_categ.json  metrics_dim_numeric.json  metrics_explanatory.json  metrics_mos_numeric.json  metrics_multi_dim.json  predictions_dim_categ.csv  predictions_dim_numeric.csv  predictions_explanatory.csv  predictions_mos_numeric.csv  predictions_multi_dim.csv
evaluation/Reference/: metrics_all.json  metrics_dim_categ.json  metrics_dim_numeric.json  metrics_explanatory.json  metrics_mos_numeric.json  metrics_multi_dim.json  predictions_dim_categ.csv  predictions_dim_numeric.csv  predictions_explanatory.csv  predictions_mos_numeric.csv  (+1 more)
slurm_outputs/: docs.txt
slurm_scripts/: evaluate_no_ref_tts.batch  evaluate_ref_tts.batch  training_script.batch
src/: dataloader_noref.py  dataloader_ref.py  dataloader_ref_whisper.py  training_noref.py  training_ref.py  training_ref_whisper.py
(+28 files in other folders)
