[project]
name = "arc-speech-quality-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "bitsandbytes>=0.49.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
    "torchaudio>=2.11.0",
]
