[project]
name = "arc-speech-quality-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "bitsandbytes>=0.49.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "torch~=2.10",
    "markupsafe==3.0.*",  # This is needed for torch to work
    "tqdm",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
    "torchaudio>=2.11.0",
]

## -------
## Here is what is special for torch
[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "platform_machine == 'aarch64'"},
  { index = "pypi", marker = "platform_machine != 'aarch64'"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
## ------

[project.scripts]
gettorch = "gettorch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
